# Otus-professional

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Doxyfile  README.md  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  version_8h.html  version_8h_source.html
.github/workflows/: release.yml
hw01/: CMakeLists.txt  test_version.cpp
hw02/: CMakeLists.txt  ip.cpp  ip.h  ip_filter.cpp  ip_filter.h  main.cpp
hw03/: CMakeLists.txt  MyAllocator.h  MyForwardList.h  MyVector.h  main.cpp
hw04/: CMakeLists.txt  Doxyfile  main.cpp
search/: all_2.js  functions_0.js  functions_2.js  searchdata.js
